# Nebula-Tools

./: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
public/data/: Characters.json  Discs.json  GemAttrValues.json  Items.json  Potential.json
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: App.tsx  Navbar.tsx
src/components/panels/: BanPanel.tsx  BattlePassPanel.tsx  BuildPanel.tsx  CharacterPanel.tsx  CleanPanel.tsx  ConnectionPanel.tsx  DiscPanel.tsx  GiveAllPanel.tsx  GivePanel.tsx  LevelPanel.tsx  MailPanel.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  MultiSelect.tsx  NumberInput.tsx  SearchableSelect.tsx  Segmented.tsx  Select.tsx  Slider.tsx  Switch.tsx  Toast.tsx  Toggle.tsx
src/i18n/: index.ts
src/layouts/: Layout.astro
src/pages/: index.astro
src/pages/api/: remote.ts
src/store/: connection.ts
src/styles/: global.css
src/utils/: api.ts  commandGenerator.ts  dataLoader.ts  storage.ts
